fix header z-index

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1336,7 +1336,7 @@ s-interactive-demo { display: flex; flex: 1 0 auto; }
 .footer { padding: 10px 20px; background: #20272a; color: white; }
 
 /** Header styling */
-.header { background: #20272a; color: white; position: relative; z-index: 20; }
+.header { background: #20272a; color: white; position: relative; z-index: 21; }
 
 .header .row { margin-left: 0; }
 
